# withsecure-recruitment

./: README.md
data science task/: README.md
mlops task/: Dockerfile  Makefile  README.md  pyproject.toml  train.py
mlops task/inference/: api.py
mlops task/tests/: test_api.py  test_api_data.csv
